# streamlit

./: .gitignore  README.md  main.py  main_page.py  pyproject.toml  requirements.txt
.cursor/rules/: python.mdc
.streamlit/: config.toml
pages/: 05_text.py  06_data-display.py  07_charting.py  08_input-widget.py  09_user_activity_dashboard.py
